--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -5,148 +5,197 @@
    "execution_count": null,
    "id": "dd329802",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples: 20000\n",
+      "Features used: ['acousticness', 'danceability', 'duration_ms', 'energy', 'instrumentalness', 'liveness', 'loudness', 'speechiness', 'tempo', 'valence', 'key', 'mode', 'count', 'duration_min', 'is_instrumental', 'is_acoustic', 'main_genre_encoded']\n",
+      "Train shape: (16000, 17) Test shape: (4000, 17)\n",
+      "\n",
+      "Baseline model (mean popularity):\n",
+      "RMSE: 22.495\n",
+      "MAE : 19.123\n"
+     ]
+    }
+   ],
    "source": [
-    "# Notebook 1: Advanced EDA and feature engineering\n",
+    "# Notebook 2: Supervised learning on popularity\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# Load data\n",
-    "df = pd.read_csv(\"data_w_genres.csv\")\n",
+    "# Load cleaned data\n",
+    "df = pd.read_csv(\"data_cleaned.csv\")\n",
     "\n",
-    "print(\"Shape:\", df.shape)\n",
-    "print(\"Columns:\", df.columns.tolist())\n",
-    "display(df.head())\n",
-    "print(\"\\nMissing values:\")\n",
-    "print(df.isna().sum().sort_values(ascending=False))\n",
-    "\n",
-    "# Genre extraction\n",
-    "def extract_main_genre(x):\n",
-    "    if pd.isna(x):\n",
-    "        return np.nan\n",
-    "    s = str(x).strip().strip(\"[]\").replace(\"'\", \"\")\n",
-    "    parts = [p.strip() for p in s.split(\",\") if p.strip()]\n",
-    "    return parts[0] if parts else np.nan\n",
-    "\n",
-    "df[\"main_genre\"] = df[\"genres\"].apply(extract_main_genre)\n",
-    "\n",
-    "print(\"\\nTop genres:\")\n",
-    "print(df[\"main_genre\"].value_counts().head(20))\n",
-    "print(\"\\nTop artists:\")\n",
-    "print(df[\"artists\"].value_counts().head(20))\n",
-    "\n",
-    "df = df.dropna(subset=[\"popularity\"])\n",
-    "\n",
-    "# Feature engineering\n",
-    "df[\"duration_min\"] = df[\"duration_ms\"] / 60000.0\n",
-    "df[\"is_instrumental\"] = (df[\"instrumentalness\"] > 0.8).astype(int)\n",
-    "df[\"is_acoustic\"] = (df[\"acousticness\"] > 0.7).astype(int)\n",
-    "df[\"main_genre_encoded\"] = df[\"main_genre\"].astype(\"category\").cat.codes\n",
-    "\n",
-    "engineered_cols = [\"duration_min\", \"is_instrumental\", \"is_acoustic\", \"main_genre_encoded\"]\n",
-    "print(\"\\nEngineered features:\", engineered_cols)\n",
-    "\n",
-    "# Numeric feature distributions\n",
-    "numeric_cols = [\n",
+    "# Features and target\n",
+    "feature_cols = [\n",
     "    \"acousticness\", \"danceability\", \"duration_ms\", \"energy\",\n",
     "    \"instrumentalness\", \"liveness\", \"loudness\", \"speechiness\",\n",
-    "    \"tempo\", \"valence\", \"popularity\", \"key\", \"mode\", \"count\",\n",
-    "    \"duration_min\"\n",
+    "    \"tempo\", \"valence\", \"key\", \"mode\", \"count\",\n",
+    "    \"duration_min\", \"is_instrumental\", \"is_acoustic\",\n",
+    "    \"main_genre_encoded\"\n",
     "]\n",
-    "numeric_cols = [c for c in numeric_cols if c in df.columns]\n",
     "\n",
-    "for col in numeric_cols:\n",
-    "    plt.figure(figsize=(8, 4))\n",
-    "    sns.histplot(df[col].dropna(), bins=50, kde=True)\n",
-    "    plt.title(col)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "feature_cols = [c for c in feature_cols if c in df.columns]\n",
+    "target_col = \"popularity\"\n",
     "\n",
-    "# Binary features\n",
-    "for col in [\"is_instrumental\", \"is_acoustic\"]:\n",
-    "    if col in df.columns:\n",
-    "        plt.figure(figsize=(4, 4))\n",
-    "        df[col].value_counts().plot(kind=\"bar\")\n",
-    "        plt.title(col)\n",
-    "        plt.xticks(rotation=0)\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
+    "data = df.dropna(subset=[target_col] + feature_cols).copy()\n",
+    "df_sample = data.sample(20000, random_state=42)\n",
     "\n",
-    "# Correlation\n",
-    "plt.figure(figsize=(12, 10))\n",
-    "corr = df[numeric_cols].corr()\n",
-    "sns.heatmap(corr, cmap=\"coolwarm\")\n",
-    "plt.title(\"Correlation matrix\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
+    "X = df_sample[feature_cols]\n",
+    "y = df_sample[target_col]\n",
     "\n",
-    "if \"popularity\" in df.columns:\n",
-    "    print(\"\\nCorrelation with popularity:\")\n",
-    "    print(corr[\"popularity\"].sort_values(ascending=False))\n",
+    "print(\"Number of samples:\", len(X))\n",
+    "print(\"Features used:\", feature_cols)\n",
     "\n",
-    "# Popularity by genre\n",
-    "top_genres = df[\"main_genre\"].value_counts().head(10).index\n",
-    "genre_popularity = (\n",
-    "    df[df[\"main_genre\"].isin(top_genres)]\n",
-    "    .groupby(\"main_genre\")[\"popularity\"]\n",
-    "    .mean()\n",
-    "    .sort_values()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "genre_popularity.plot(kind=\"barh\")\n",
-    "plt.title(\"Popularity by genre\")\n",
+    "print(\"Train shape:\", X_train.shape, \"Test shape:\", X_test.shape)\n",
+    "\n",
+    "# Baseline: predict mean popularity\n",
+    "y_mean = np.full_like(y_test, y_train.mean(), dtype=float)\n",
+    "baseline_rmse = np.sqrt(mean_squared_error(y_test, y_mean))\n",
+    "baseline_mae = mean_absolute_error(y_test, y_mean)\n",
+    "print(\"\\nBaseline model (mean popularity):\")\n",
+    "print(f\"RMSE: {baseline_rmse:.3f}\")\n",
+    "print(f\"MAE : {baseline_mae:.3f}\")\n",
+    "\n",
+    "# Compare models\n",
+    "models = {\n",
+    "    \"LinearRegression\": LinearRegression(),\n",
+    "    \"RandomForest\": RandomForestRegressor(n_estimators=200, random_state=42, n_jobs=-1),\n",
+    "    \"GradientBoosting\": GradientBoostingRegressor(random_state=42),\n",
+    "    \"KNN_10\": KNeighborsRegressor(n_neighbors=10)\n",
+    "}\n",
+    "\n",
+    "rows = []\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train, y_train)\n",
+    "    preds = model.predict(X_test)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
+    "    mae = mean_absolute_error(y_test, preds)\n",
+    "    r2 = r2_score(y_test, preds)\n",
+    "    rows.append([name, rmse, mae, r2])\n",
+    "\n",
+    "results_df = pd.DataFrame(rows, columns=[\"Model\", \"RMSE\", \"MAE\", \"R2\"])\n",
+    "print(\"\\nModel comparison:\")\n",
+    "print(results_df.sort_values(\"RMSE\"))\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "sns.barplot(data=results_df, x=\"Model\", y=\"RMSE\")\n",
+    "plt.title(\"RMSE by model\")\n",
+    "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Popularity by artist\n",
-    "top_artists = df[\"artists\"].value_counts().head(15).index\n",
-    "artist_popularity = (\n",
-    "    df[df[\"artists\"].isin(top_artists)]\n",
-    "    .groupby(\"artists\")[\"popularity\"]\n",
-    "    .mean()\n",
-    "    .sort_values()\n",
+    "# Cross validation on Random Forest\n",
+    "rf_base = RandomForestRegressor(n_estimators=200, random_state=42, n_jobs=-1)\n",
+    "cv_scores = cross_val_score(rf_base, X, y, cv=5, scoring=\"r2\")\n",
+    "print(\"\\nRandom Forest CV R2:\", cv_scores)\n",
+    "print(\"Mean CV R2:\", cv_scores.mean())\n",
+    "\n",
+    "# Simple hyperparameter tuning\n",
+    "param_grid = {\n",
+    "    \"n_estimators\": [200],\n",
+    "    \"max_depth\": [None, 20],\n",
+    "}\n",
+    "\n",
+    "rf = RandomForestRegressor(random_state=42, n_jobs=-1)\n",
+    "\n",
+    "grid = GridSearchCV(\n",
+    "    estimator=rf,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring=\"r2\",\n",
+    "    cv=3,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=1\n",
     ")\n",
     "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "artist_popularity.plot(kind=\"barh\")\n",
-    "plt.title(\"Popularity by artist\")\n",
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"\\nBest params:\")\n",
+    "print(grid.best_params_)\n",
+    "print(\"Best CV R2:\", grid.best_score_)\n",
+    "\n",
+    "best_rf = grid.best_estimator_\n",
+    "\n",
+    "# Final evaluation\n",
+    "y_pred = best_rf.predict(X_test)\n",
+    "\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"\\nTuned Random Forest on test:\")\n",
+    "print(f\"RMSE: {rmse:.3f}\")\n",
+    "print(f\"MAE : {mae:.3f}\")\n",
+    "print(f\"R2  : {r2:.3f}\")\n",
+    "print(f\"RMSE gain vs baseline: {baseline_rmse - rmse:.3f}\")\n",
+    "\n",
+    "# Predicted vs actual\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.scatter(y_test, y_pred, alpha=0.3)\n",
+    "plt.plot([0, 100], [0, 100], \"r-\")\n",
+    "plt.xlabel(\"Actual popularity\")\n",
+    "plt.ylabel(\"Predicted popularity\")\n",
+    "plt.title(\"Predicted vs actual\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Feature vs popularity\n",
-    "rel_cols = [\n",
-    "    \"danceability\", \"energy\", \"acousticness\", \"instrumentalness\",\n",
-    "    \"loudness\", \"valence\", \"tempo\", \"duration_min\"\n",
-    "]\n",
-    "rel_cols = [c for c in rel_cols if c in df.columns]\n",
+    "# Residuals\n",
+    "residuals = y_test - y_pred\n",
     "\n",
-    "sample_size = min(8000, len(df))\n",
-    "sample = df.sample(sample_size, random_state=42)\n",
-    "\n",
-    "for col in rel_cols:\n",
-    "    plt.figure(figsize=(7, 5))\n",
-    "    sns.scatterplot(data=sample, x=col, y=\"popularity\", alpha=0.25)\n",
-    "    plt.title(f\"{col} vs popularity\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "# Pairplot\n",
-    "pair_cols = [\"danceability\", \"energy\", \"acousticness\", \"valence\", \"popularity\"]\n",
-    "pair_cols = [c for c in pair_cols if c in df.columns]\n",
-    "\n",
-    "pair_sample = df[pair_cols].sample(min(2000, len(df)), random_state=42)\n",
-    "sns.pairplot(pair_sample)\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "sns.histplot(residuals, bins=50, kde=True)\n",
+    "plt.title(\"Residuals\")\n",
+    "plt.xlabel(\"Residual\")\n",
+    "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Save cleaned dataset\n",
-    "df.to_csv(\"data_cleaned.csv\", index=False)\n",
-    "print(\"\\nSaved cleaned dataset as data_cleaned.csv\")"
+    "plt.figure(figsize=(8, 4))\n",
+    "plt.scatter(y_pred, residuals, alpha=0.3)\n",
+    "plt.axhline(0, color=\"r\")\n",
+    "plt.xlabel(\"Predicted popularity\")\n",
+    "plt.ylabel(\"Residual\")\n",
+    "plt.title(\"Residuals vs predicted\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Permutation importance\n",
+    "perm = permutation_importance(\n",
+    "    best_rf, X_test, y_test,\n",
+    "    n_repeats=10,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "importances = pd.Series(perm.importances_mean, index=feature_cols).sort_values()\n",
+    "\n",
+    "print(\"\\nPermutation feature importance:\")\n",
+    "print(importances.sort_values(ascending=False))\n",
+    "\n",
+    "plt.figure(figsize=(8, 10))\n",
+    "importances.tail(15).plot(kind=\"barh\")\n",
+    "plt.title(\"Feature importance (top 15)\")\n",
+    "plt.xlabel(\"Mean decrease in R2\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
@@ -157,7 +206,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
